--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
 </head>
 <body>
     <!-- Top Section -->
-    <section class="top-section">
+    <div class="top-section">
         <h2>Welcome to Innovation</h2>
         <p>Discover the future of technology with our revolutionary approach to design and functionality. Experience the perfect blend of form and performance.</p>
-    </section>
+    </div>
 
     <!-- Main Scroll Wrapper -->
     <div class="scroll-wrapper">
@@ -241,11 +241,11 @@
     </div>
 
     <!-- Bottom Section -->
-    <section class="bottom-section">
+    <div class="bottom-section">
         <h2>Ready to Get Started?</h2>
         <p>Join thousands of satisfied customers who have already experienced the difference. Take the next step towards excellence.</p>
         <a href="#" class="cta-button">Get Started Today</a>
-    </section>
+    </div>
 
     <script>
         const mainVideo = document.getElementById('mainVideo');
